--- a/styles/scss/layout/_footer.scss
+++ b/styles/scss/layout/_footer.scss
@@ -24,13 +24,23 @@
     overflow-wrap: normal;
     word-break: normal;
     text-align: center;
-    padding-inline: 20vw;
+    padding-inline: 25vw;
     padding-block: 20%;
     height: fit-content;
     display: block;
     font-size: 5vw;
     * {
       font-size: 5vw;
+    }
+    path {
+      stroke-dasharray: 1;
+      stroke-dashoffset: 0;
+    }
+    .nectar-scribble path {
+      stroke-linecap: round;
+      opacity: 1;
+      stroke-dashoffset: 1;
+      animation: StokeAnimation 1.3s cubic-bezier(0.65, 0, 0.35, 1) forwards;
     }
   }
   .hightlight-header {
@@ -61,7 +71,7 @@
     align-items: center;
     justify-content: space-between;
     height: 90px;
-    border-top: 1px rgba(255,255,255,.2) solid;
+    border-top: 1px rgba(255, 255, 255, 0.2) solid;
     padding-inline: 5%;
     &-right {
       display: flex;
