--- a/styles/scss/page/mainpage/_section-1.scss
+++ b/styles/scss/page/mainpage/_section-1.scss
@@ -78,6 +78,7 @@
   box-sizing: border-box;
   font-family: Heebo;
   font-weight: 700;
+  font-size: inherit;
 
   .basic-underline {
     position: absolute;
