--- a/styles/scss/layout/_header.scss
+++ b/styles/scss/layout/_header.scss
@@ -28,8 +28,14 @@ a::after {
 .header-nav {
   @extend %flex-row;
   padding-inline: 30px;
-  max-width: 100vw;
+  // max-width: 100vw;
+  width: 100%;
   height: 80px;
+  background-color: white;
+  position: sticky;
+  z-index: 20000;
+  
+  top: 0;
   .left-nav,
   .right-nav,
   .mobile-right-nav {
