--- a/styles/scss/page/_test.scss
+++ b/styles/scss/page/_test.scss
@@ -101,9 +101,9 @@ code {
   }
 }
 
-.box {
-  display: inline-block;
-  &:hover {
-    animation: FadeUpAnimation 1.3s cubic-bezier(0.65, 0, 0.35, 1) forwards;
-  }
-}
+// .box {
+//   display: inline-block;
+//   &:hover {
+//     animation: FadeUpAnimation 1.3s cubic-bezier(0.65, 0, 0.35, 1) forwards;
+//   }
+// }
