--- a/styles/scss/page/mainpage/_section-4.scss
+++ b/styles/scss/page/mainpage/_section-4.scss
@@ -5,7 +5,7 @@
   color: white;
   padding-block: 50px;
   position: relative;
-  .uppder-slide{
+  .uppder-slide {
     max-width: 100vw;
     overflow: hidden;
   }
@@ -25,8 +25,6 @@
     }
   }
   &-items {
-    
-    
     padding-left: 8%;
     padding-right: 8%;
     margin-top: 50px;
@@ -103,7 +101,7 @@
         width: 45%;
         // width: 100%; -> break when md-soon
         margin-bottom: 50px;
-        margin-left: 5%;
+        margin-left: 4%;
         position: relative;
         h5 {
           font-family: Plus Jakarta Sans;
@@ -136,6 +134,38 @@
       }
     }
   }
+}
+.round-crusor {
+  height: 90px;
+  width: 90px;
+  background-color: rgba(39, 39, 39, 0.664) ;
+  position: fixed;
+  border-radius: 400px;
+  pointer-events: none;
+  z-index: 1000;
+  
+  display: flex;
+  align-items: center;
+  backdrop-filter: blur(4px);
+  justify-items: center;
+  transform: translate(-50%, -50%) scale(0);
+  cursor: none;
+
+}
+.view-crusor {
+  // height: 80px;
+  position: fixed;
+  border-radius: 40px;
+  pointer-events: none;
+  z-index: 1000;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  transform: translate(-50%, -50%) scale(0);
+}
+.show {
+  transform: translate(-50%, -50%) scale(1);
 }
 @media only screen and (max-width: map-get($breakpoints, large)) {
   .section-demo {
