--- a/styles/scss/page/mainpage/_all.scss
+++ b/styles/scss/page/mainpage/_all.scss
@@ -5,12 +5,26 @@
 section {
   max-width: 100vw;
   position: relative;
+  // padding-inline: 5vw;
 }
 
 @import "section-1";
+//Main wellcome 
+
 @import "section-2";
+//Sologan with flying bird
+
 @import "section-3";
+//Ads with 3 vieos
+
 @import "section-4";
+//Demos showroom
+
 @import "section-5";
+//Slider with dynamic word  --- incomplete
+
 @import "section-6";
+//Big section with many tabs
+
 @import "section-7";
+//FAQs
