--- a/styles/scss/page/mainpage/_section-7.scss
+++ b/styles/scss/page/mainpage/_section-7.scss
@@ -13,6 +13,7 @@
           max-height: 520px;
           margin-bottom: 50px;
         }
+        border-bottom: none;
       }
     }
     .tittle {
@@ -68,9 +69,7 @@
     .question {
       font-size: 3vw;
     }
-
   }
-
 }
 @media only screen and (max-width: map-get($breakpoints, medium)) {
   //w 768
@@ -81,6 +80,9 @@
     }
     .question {
       font-size: 4vw;
+      svg {
+        height: 20px;
+      }
     }
   }
 }
