--- a/styles/scss/base/_keyframe.scss
+++ b/styles/scss/base/_keyframe.scss
@@ -1,3 +1,21 @@
+@keyframes nectar-scrolling-text-animation {
+  0% {
+    transform: translateX(-20%) translateZ(0);
+  }
+  100% {
+    transform: translateX(-120%) translateZ(0);
+  }
+}
+
+@keyframes fadein  {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 @keyframes FadeUpAnimation {
   0% {
     opacity: 0;
