--- a/styles/scss/layout/_header.scss
+++ b/styles/scss/layout/_header.scss
@@ -2,6 +2,8 @@ a {
   display: block;
   position: relative;
   padding: 0.2em 0;
+  width: fit-content;
+  overflow: hidden;
   // transform: translate3d(-100%, 0, 0);
 }
 a::after {
@@ -10,64 +12,212 @@ a::after {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 0.1em;
+  height: 1px;
   background-color: rgb(0, 0, 0);
   opacity: 0;
   transition: opacity 300ms, transform 300ms;
   transform: translate3d(-100%, 0, 0);
 }
-// a:hover::after,
-// a:focus::after {
-//   opacity: 1;
-//   transform: translate3d(0, 0.2em, 0);
-// }
+a:hover::after,
+a:focus::after {
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
+}
+%center-self {
+  top: 50%;
+  transform: translateY(-50%);
+}
 %flex-row {
   display: flex;
-  align-items: center;
+  // align-items: center;
+  align-items: stretch;
+}
+%background-img-setting {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 .header-nav {
   @extend %flex-row;
   padding-inline: 30px;
-  // max-width: 100vw;
   width: 100%;
   height: 80px;
   background-color: white;
   position: sticky;
   z-index: 20000;
-  
+  transition-duration: 0.5s;
   top: 0;
   .left-nav,
   .right-nav,
   .mobile-right-nav {
     @extend %flex-row;
+    
     gap: 33px;
+    height: 100%;
+    // align-items: center;
   }
   .logo {
+    @extend %center-self;
     height: 24px;
     width: 105px;
     position: relative;
     margin-right: 15px;
   }
-  a {
-    font-weight: 500;
-    overflow: hidden;
-    text-underline-offset: 5px;
+
+  p {
     font-size: 16px;
-    line-height: 18px;
-    &:hover::after,
-    &:focus::after {
-      opacity: 1;
-      transform: translate3d(0, 0, 0);
-    }
   }
   .blank-space {
     flex-grow: 1;
   }
+
+  .left-nav-item:hover > .drop {
+    display: block;
+    opacity: 1;
+  }
+  .left-nav-item,
+  .right-nav-item {
+    text-align: center;
+    a {
+      font-weight: 500;
+      overflow: hidden;
+      text-underline-offset: 5px;
+      font-size: 16px;
+      line-height: 18px;
+
+      @extend %center-self;
+    }
+    .purchase-button {
+      position: relative;
+      @extend %center-self;
+    }
+
+    &:hover > a::after {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
   .mobile-right-nav {
     display: none;
     // flex-grow: 0;
   }
 }
+.drop {
+  display: none;
+  transition-delay: 1s;
+  animation-delay: 1s;
+  transition-duration: 0.2s;
+  top: 70px;
+  filter: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
+  position: fixed;
+  z-index: 100;
+}
+
+.what-new-drop {
+  &-list {
+    width: 290px;
+    background-color: map-get($colors, background1);
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border-radius: 10px;
+    gap: 15px;
+  }
+  &-item {
+    // object-fit: fill;
+    position: relative;
+    height: 90px;
+    overflow: hidden;
+    border-radius: 10px;
+    .img {
+      transition-duration: 0.5s;
+      height: 100%;
+      @extend %background-img-setting;
+      top: 0;
+      position: relative;
+      text-align: center;
+    }
+    .cover-on {
+      height: 100%;
+      width: 100%;
+      background-size: cover;
+      background-position: center;
+      background-color: rgba(0, 0, 0, 0.2);
+      transition-duration: 0.5s;
+      top: 0;
+      position: absolute;
+      text-align: center;
+      a {
+        width: fit-content;
+        margin: auto;
+        color: map-get($colors, txt-white);
+        &::after {
+          background-color: rgb(255, 255, 255);
+        }
+      }
+    }
+    &:hover {
+      .img {
+        transform: scale(1.2);
+      }
+      .cover-on {
+        background-color: rgba(0, 0, 0, 0.6);
+      }
+      a:after {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+      }
+    }
+  }
+}
+
+.elements-drop {
+
+  z-index: 100;
+  left: 50%;
+  transform: translateX(-50%);
+  ///
+
+  min-height: 100px;
+  width: 96%;
+  border-radius: 15px;
+  background-color: white;
+  overflow: hidden;
+
+  .container {
+    display: flex;
+    align-items: stretch;
+    h6 {
+      font-weight: map-get($font-weight, medium);
+      margin-block: 10px;
+    }
+  }
+  .container > li {
+    padding: 40px;
+    text-align: start;
+    flex-grow: 1;
+  }
+  .img-left {
+    background-color: saddlebrown;
+    width: 25%;
+    @extend %background-img-setting;
+  }
+  .elements-drop-links {
+    // padding: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    a {
+      font-size: $font-size-sm;
+      padding: 0.1em 0;
+      font-size: 14px;
+      font-weight: map-get($font-weight, normal );
+      // overflow-x: hidden;
+    }
+  }
+}
+
 @media only screen and (max-width: map-get($breakpoints, large)) {
   .header-nav .left-nav,
   .header-nav .right-nav {
@@ -77,7 +227,8 @@ a::after {
     height: 50px;
     .mobile-right-nav {
       display: flex;
-      gap: 20px;
+      align-items: center;
+      gap: 10px;
     }
   }
 }
