--- a/styles/scss/page/mainpage/_section-1.scss
+++ b/styles/scss/page/mainpage/_section-1.scss
@@ -1,10 +1,19 @@
+@keyframes main-intro-animation {
+  from {
+    margin-inline: 0%;
+    margin-top: -20px;
+  }
+  to {
+    margin-inline: 2%;
+    margin-top: 0px;
+  }
+}
 .secion-first-intro {
-  margin-inline: 35px;
+  margin-inline: 2%;
+  animation: main-intro-animation 1s;
   margin-bottom: 20px;
   height: fit-content;
   max-width: 100vw;
-  // overflow: hidden;
-  // padding: 20px;
 }
 .first-intro {
   &-container {
@@ -29,6 +38,7 @@
     background-repeat: no-repeat;
     height: 100%;
     width: 100%;
+    padding-inline: 70px;
   }
   &-content {
     display: flex;
@@ -36,7 +46,7 @@
     align-items: center;
     justify-content: baseline;
     padding-top: 100px;
-    padding-inline: 70px;
+    // padding-inline: 70px;
     .users {
       display: flex;
       align-items: center;
@@ -87,6 +97,16 @@
     bottom: 10px;
     left: 0;
     bottom: -7%;
+    path {
+      stroke-dasharray: 1;
+      stroke-dashoffset: 0;
+    }
+    &.animated {
+      path {
+        animation-delay: 3s;
+        animation: StokeAnimation 1.3s;
+      }
+    }
   }
 }
 
@@ -119,15 +139,15 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-  }
-  .first-intro-content-up-tittle {
-    padding: 0px;
-    padding-top: 30px;
-    padding-right: 1%;
-    padding-left: 1%;
-    h1 {
-      font-size: 7vw;
-      line-height: 1.1;
+    &-tittle {
+      padding: 0px;
+      padding-top: 30px;
+      padding-right: 1%;
+      padding-left: 1%;
+      h1 {
+        font-size: 7vw;
+        line-height: 1.1;
+      }
     }
   }
   .first-intro-content .users {
@@ -137,16 +157,17 @@
     padding-inline: 2vw;
     width: 70%;
     p {
-      font-size: map-get($inline, small );
+      font-size: map-get($inline, small);
     }
   }
 }
-@media only screen and (max-width: map-get($breakpoints, medium)) { 
+@media only screen and (max-width: map-get($breakpoints, medium)) {
   .first-intro-content-up-decription {
-
     p {
-      font-size: map-get($inline, tiny );
+      font-size: map-get($inline, tiny);
     }
   }
-
+  .first-intro-container {
+    padding-inline: 30px;
+  }
 }
