--- a/styles/scss/page/mainpage/_section-4.scss
+++ b/styles/scss/page/mainpage/_section-4.scss
@@ -36,7 +36,7 @@
     align-content: stretch;
     flex: 0 0 auto;
     &-filter {
-      padding-right: 50px;
+      // padding-right: 50px;
       flex-shrink: 0;
       display: block;
       // background: white;
