--- a/styles/scss/layout/_header.scss
+++ b/styles/scss/layout/_header.scss
@@ -39,9 +39,11 @@ a:focus::after {
 }
 .header-nav {
   @extend %flex-row;
+  animation: HeaderStartup 2s;
   padding-inline: 30px;
   width: 100%;
   height: 80px;
+  max-height: 80px;
   background-color: white;
   position: sticky;
   z-index: 20000;
