--- a/styles/scss/base/_base.scss
+++ b/styles/scss/base/_base.scss
@@ -13,6 +13,8 @@ p,a {
   // what is this for ??
   font-family: "Roboto", "Open Sans", sans-serif;
   // font-weight: map-get($font-weight, normal );
+  line-height: 25px;
+
 }
 ul {
   list-style-type: none;
